[580788] SSE StringUtils imports com.ibm.icu.util.StringTokenizer instead of java.util.StringTokenizer